Revise meta tags for extended-range features
Updated meta tags and descriptions to reflect extended range and new features of the RockyTalkie app.

--- a/index.html
+++ b/index.html
@@ -3,29 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="RockyTalkie - Bluetooth-only walkie-talkie app for iOS. Works completely offline with no internet or servers. Perfect for hiking, camping, outdoor adventures, and emergency communication.">
-    <meta name="keywords" content="walkie talkie app, bluetooth walkie talkie, offline communication, push to talk, two way radio, peer to peer, location finder, hiking app, outdoor communication, emergency communication, no wifi, no internet, privacy focused, iOS walkie talkie">
+    <meta name="description" content="RockyTalkie - Extended-range walkie-talkie app for iOS with up to 600 feet range. WiFi Direct & Bluetooth. Works completely offline with no internet or servers. Perfect for hiking, camping, outdoor adventures, and emergency communication.">
+    <meta name="keywords" content="walkie talkie app, wifi direct, bluetooth walkie talkie, extended range, offline communication, push to talk, two way radio, peer to peer, location finder, hiking app, outdoor communication, emergency communication, no internet, privacy focused, iOS walkie talkie">
     <meta name="author" content="RockyTalkie">
     <meta name="robots" content="index, follow">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://rockytalkie.app/">
-    <meta property="og:title" content="RockyTalkie: Bluetooth Walkie-Talkie App - Offline Communication">
-    <meta property="og:description" content="Stay connected anywhere with RockyTalkie - the Bluetooth-only walkie-talkie that works completely offline. No internet, no servers, just pure peer-to-peer communication.">
+    <meta property="og:title" content="RockyTalkie: Extended Range Walkie-Talkie App - Up to 600 Feet">
+    <meta property="og:description" content="Stay connected anywhere with RockyTalkie - extended-range walkie-talkie with up to 600 feet range using WiFi Direct & Bluetooth. Works completely offline with no internet or servers.">
     <meta property="og:image" content="https://rockytalkie.app/og-image.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://rockytalkie.app/">
-    <meta property="twitter:title" content="RockyTalkie: Bluetooth Walkie-Talkie App - Offline Communication">
-    <meta property="twitter:description" content="Stay connected anywhere with RockyTalkie - the Bluetooth-only walkie-talkie that works completely offline.">
+    <meta property="twitter:title" content="RockyTalkie: Extended Range Walkie-Talkie App - Up to 600 Feet">
+    <meta property="twitter:description" content="Stay connected anywhere with RockyTalkie - extended-range walkie-talkie with up to 600 feet range using WiFi Direct & Bluetooth.">
     <meta property="twitter:image" content="https://rockytalkie.app/og-image.png">
 
     <!-- App Store Smart Banner -->
     <meta name="apple-itunes-app" content="app-id=YOUR_APP_ID">
 
-    <title>RockyTalkie: Bluetooth Walkie-Talkie App - Offline Communication for iOS</title>
+    <title>RockyTalkie: Extended Range Walkie-Talkie - Up to 600 Feet | WiFi Direct & Bluetooth</title>
 
     <!-- Structured Data -->
     <script type="application/ld+json">
@@ -45,7 +45,7 @@
         "price": "0",
         "priceCurrency": "USD"
       },
-      "description": "Bluetooth-only walkie-talkie app that works completely offline. No internet, no servers, no data collection. Perfect for hiking, camping, and emergency communication."
+      "description": "Extended-range walkie-talkie app with up to 600 feet range using WiFi Direct & Bluetooth. Works completely offline. No internet, no servers, no data collection. Perfect for hiking, camping, and emergency communication."
     }
     </script>
 
@@ -566,8 +566,8 @@
     <header id="home">
         <div class="container">
             <h1>RockyTalkie</h1>
-            <p class="tagline">Bluetooth-Only Walkie-Talkie • No Internet Required</p>
-            <p>Stay connected anywhere with the offline walkie-talkie app. No servers, no data collection, just pure peer-to-peer communication.</p>
+            <p class="tagline">Extended Range Walkie-Talkie • Up to 600 Feet • No Internet Required</p>
+            <p>Stay connected anywhere with WiFi Direct & Bluetooth extended-range walkie-talkie. No servers, no data collection, just pure peer-to-peer communication up to 600 feet.</p>
             <a href="https://apps.apple.com/app/rockytalkie" class="cta-button">Download on the App Store</a>
         </div>
     </header>
@@ -578,8 +578,8 @@
             <h2 class="section-title">Key Features</h2>
             <div class="feature-grid">
                 <div class="feature-card">
-                    <h3>Bluetooth-Only Connection</h3>
-                    <p>Connect two devices using a shared channel code. No Wi-Fi needed, no cellular required. Works in Airplane Mode with Bluetooth enabled.</p>
+                    <h3>Extended Range Connection</h3>
+                    <p>Connect two devices with WiFi Direct for up to 600 feet of range. Automatic fallback to Bluetooth for reliability. Works in Airplane Mode with WiFi/Bluetooth enabled.</p>
                 </div>
                 <div class="feature-card">
                     <h3>Push-to-Talk Interface</h3>
@@ -595,7 +595,7 @@
                 </div>
                 <div class="feature-card">
                     <h3>Works Offline</h3>
-                    <p>Perfect for hiking, camping, or skiing where internet is unavailable. Zero infrastructure dependency means it works when you need it most.</p>
+                    <p>Perfect for hiking, camping, or skiing where internet is unavailable. Extended 600-foot range with WiFi Direct. Zero infrastructure dependency means it works when you need it most.</p>
                 </div>
                 <div class="feature-card">
                     <h3>Simple Setup</h3>
@@ -612,7 +612,7 @@
             <div class="use-case-list">
                 <div class="use-case">
                     <h3>Outdoor Adventures</h3>
-                    <p>Stay connected while hiking, camping, or skiing without draining your battery searching for cellular signal.</p>
+                    <p>Stay connected up to 600 feet while hiking, camping, or skiing. Extended range with WiFi Direct without draining your battery searching for cellular signal.</p>
                 </div>
                 <div class="use-case">
                     <h3>Event Coordination</h3>
@@ -620,7 +620,7 @@
                 </div>
                 <div class="use-case">
                     <h3>Emergency Preparedness</h3>
-                    <p>When internet infrastructure goes down, Bluetooth-based communication can be a lifeline. Works as long as your devices have power.</p>
+                    <p>When internet infrastructure goes down, peer-to-peer communication with 600-foot range can be a lifeline. Works as long as your devices have power.</p>
                 </div>
                 <div class="use-case">
                     <h3>Privacy-Conscious Users</h3>
@@ -653,7 +653,7 @@
                     <div class="step-number">3</div>
                     <div class="step-content">
                         <strong>Devices automatically connect</strong>
-                        <p>RockyTalkie finds each other via Bluetooth automatically.</p>
+                        <p>RockyTalkie finds each other via WiFi Direct or Bluetooth automatically.</p>
                     </div>
                 </div>
                 <div class="step">
@@ -701,29 +701,34 @@
                 </ul>
 
                 <h3>1.2 How RockyTalkie Works</h3>
-                <p>RockyTalkie uses <strong>direct device-to-device communication</strong> via Bluetooth Low Energy (BLE). This means:</p>
+                <p>RockyTalkie uses <strong>direct device-to-device communication</strong> via WiFi Direct (MultipeerConnectivity) and Bluetooth Low Energy (BLE). This means:</p>
                 <ul>
-                    <li>Your voice messages travel directly from your device to your partner's device</li>
+                    <li>Your voice messages travel directly from your device to your partner's device with extended range up to 600 feet</li>
                     <li>No data passes through our servers (we don't have any servers)</li>
                     <li>No data is stored anywhere except temporarily in device memory during transmission</li>
                     <li>Once a message is delivered and played, it is immediately discarded</li>
+                    <li>The app intelligently selects the best transport (WiFi Direct or Bluetooth) with automatic fallback</li>
                 </ul>
 
                 <h2>2. Permissions Required</h2>
 
                 <p>RockyTalkie requests the following iOS permissions to function. These permissions are used ONLY for the stated purposes and no data leaves your device:</p>
 
-                <h3>2.1 Bluetooth Permission</h3>
-                <p><strong>Purpose:</strong> To discover and connect with other nearby devices running RockyTalkie.</p>
+                <h3>2.1 Local Network Permission</h3>
+                <p><strong>Purpose:</strong> To enable WiFi Direct (MultipeerConnectivity) for extended range communication up to 600 feet.</p>
+                <p><strong>Data Usage:</strong> WiFi Direct is used only for establishing peer-to-peer connections. No network data is collected, stored, or transmitted to third parties or servers. This is for device-to-device communication only, not internet access.</p>
+
+                <h3>2.2 Bluetooth Permission</h3>
+                <p><strong>Purpose:</strong> To discover and connect with other nearby devices running RockyTalkie, and as automatic fallback when WiFi Direct is unavailable.</p>
                 <p><strong>Data Usage:</strong> Bluetooth data is used only for establishing peer-to-peer connections. No Bluetooth data is collected, stored, or transmitted to third parties.</p>
 
-                <h3>2.2 Microphone Permission</h3>
+                <h3>2.3 Microphone Permission</h3>
                 <p><strong>Purpose:</strong> To record your voice messages when you press and hold the talk button.</p>
                 <p><strong>Data Usage:</strong> Audio is recorded, compressed, and transmitted directly to your connected partner's device. No audio is stored on your device after transmission, and no audio is sent to any servers.</p>
 
-                <h3>2.3 Location Permission (Optional)</h3>
+                <h3>2.4 Location Permission (Optional)</h3>
                 <p><strong>Purpose:</strong> To enable the optional "Finder" feature, which shows distance and bearing to your connected partner.</p>
-                <p><strong>Data Usage:</strong> Your location coordinates are shared directly with your connected partner's device via Bluetooth. Location data is never sent to servers, never stored, and never shared with third parties.</p>
+                <p><strong>Data Usage:</strong> Your location coordinates are shared directly with your connected partner's device via WiFi Direct or Bluetooth. Location data is never sent to servers, never stored, and never shared with third parties.</p>
 
                 <h2>3. Data Security</h2>
 
@@ -768,21 +773,21 @@
                     <div class="faq-item">
                         <div class="faq-question">How does RockyTalkie work?</div>
                         <div class="faq-answer">
-                            <p>RockyTalkie uses Bluetooth Low Energy (BLE) to connect two iOS devices directly. When you and your partner enter the same channel code, your devices automatically discover each other and establish a peer-to-peer connection. Press and hold to record your voice, release to send it instantly to your partner's device.</p>
+                            <p>RockyTalkie uses WiFi Direct and Bluetooth to connect two iOS devices directly with extended range up to 600 feet. When you and your partner enter the same channel code, your devices automatically discover each other and establish a peer-to-peer connection. The app intelligently selects WiFi Direct for extended range, with automatic fallback to Bluetooth for reliability. Press and hold to record your voice, release to send it instantly to your partner's device.</p>
                         </div>
                     </div>
 
                     <div class="faq-item">
                         <div class="faq-question">What's the range of RockyTalkie?</div>
                         <div class="faq-answer">
-                            <p>RockyTalkie works within standard Bluetooth Low Energy range, typically 100 feet (30 meters) in open areas. Range can be affected by obstacles like walls, buildings, and terrain. For best results, maintain line-of-sight between devices.</p>
+                            <p>RockyTalkie extends range up to 600 feet (180 meters) using WiFi Direct, which is 3-6x better than Bluetooth alone. When WiFi Direct is unavailable or fails, the app automatically falls back to Bluetooth Low Energy (typically 30-100 feet / 10-30 meters). Range can be affected by obstacles like walls, buildings, and terrain. For best results, maintain line-of-sight between devices.</p>
                         </div>
                     </div>
 
                     <div class="faq-item">
                         <div class="faq-question">Does RockyTalkie work without internet?</div>
                         <div class="faq-answer">
-                            <p>Yes! RockyTalkie works completely offline. It doesn't require Wi-Fi or cellular data. You can even use it in Airplane Mode as long as Bluetooth is enabled. This makes it perfect for hiking, camping, or anywhere internet is unavailable.</p>
+                            <p>Yes! RockyTalkie works completely offline. It doesn't require internet or cellular data. It uses WiFi Direct (peer-to-peer WiFi, not internet WiFi) and Bluetooth for direct device-to-device communication. You can even use it in Airplane Mode as long as WiFi or Bluetooth is enabled. This makes it perfect for hiking, camping, or anywhere internet is unavailable.</p>
                         </div>
                     </div>
 
@@ -825,15 +830,16 @@
                 <div class="faq-section troubleshooting">
                     <h2>Troubleshooting</h2>
 
-                    <h3>Bluetooth Not Connecting</h3>
+                    <h3>Connection Issues</h3>
                     <p>If you're having trouble connecting with another device:</p>
                     <ul>
                         <li>Ensure both devices are using the exact same channel code (case-sensitive)</li>
-                        <li>Check that Bluetooth is enabled on both devices</li>
-                        <li>Make sure both devices are within Bluetooth range (100 feet)</li>
-                        <li>Verify that RockyTalkie has Bluetooth permissions in iOS Settings → Privacy → Bluetooth</li>
+                        <li>Check that WiFi and/or Bluetooth is enabled on both devices</li>
+                        <li>Make sure both devices are within range (up to 600 feet for WiFi Direct, 30-100 feet for Bluetooth)</li>
+                        <li>Verify that RockyTalkie has Local Network permission in iOS Settings → Privacy & Security → Local Network</li>
+                        <li>Verify that RockyTalkie has Bluetooth permission in iOS Settings → Privacy & Security → Bluetooth</li>
                         <li>Try restarting the app on both devices</li>
-                        <li>If in Airplane Mode, make sure Bluetooth is manually enabled</li>
+                        <li>If in Airplane Mode, make sure WiFi or Bluetooth is manually enabled</li>
                     </ul>
 
                     <h3>Location Permission Prompt Not Showing</h3>
@@ -857,20 +863,22 @@
                     <h3>Poor Audio Quality</h3>
                     <p>If audio quality is degraded:</p>
                     <ul>
-                        <li>Move closer to your partner to improve Bluetooth signal strength</li>
-                        <li>Remove obstacles between devices (walls, large objects)</li>
-                        <li>Ensure there's no interference from other Bluetooth devices</li>
+                        <li>Move closer to your partner to improve signal strength (WiFi Direct works best within 600 feet)</li>
+                        <li>Remove obstacles between devices (walls, large objects) for better line-of-sight</li>
+                        <li>Ensure there's no interference from other WiFi or Bluetooth devices</li>
                         <li>Check that your microphone is not blocked by a case or cover</li>
+                        <li>Try enabling WiFi for extended range, or Bluetooth for better reliability in crowded areas</li>
                     </ul>
 
                     <h3>Connection Keeps Dropping</h3>
                     <p>If your connection is unstable:</p>
                     <ul>
-                        <li>Stay within Bluetooth range (devices may be too far apart)</li>
-                        <li>Minimize obstacles between devices</li>
-                        <li>Close other apps that use Bluetooth</li>
+                        <li>Stay within range (up to 600 feet for WiFi Direct, 30-100 feet for Bluetooth)</li>
+                        <li>Minimize obstacles between devices for better line-of-sight</li>
+                        <li>Close other apps that use WiFi Direct or Bluetooth</li>
                         <li>Ensure both devices have sufficient battery</li>
-                        <li>Try toggling Bluetooth off and on in iOS Settings</li>
+                        <li>Try toggling WiFi or Bluetooth off and on in iOS Settings</li>
+                        <li>The app will automatically try to reconnect and switch between WiFi Direct and Bluetooth</li>
                     </ul>
 
                     <div class="note">
