Update tagline for RockyTalkie in index.html

--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
     <header id="home">
         <div class="container">
             <h1>RockyTalkie</h1>
-            <p class="tagline">Extended Range Walkie-Talkie • Up to 600 Feet • No Internet Required</p>
+            <p class="tagline">Walkie-Talkie • Up to 600 Feet • Offline Communication</p>
             <p>Stay connected anywhere with WiFi Direct & Bluetooth extended-range walkie-talkie. No servers, no data collection, just pure peer-to-peer communication up to 600 feet.</p>
             <a href="https://apps.apple.com/app/rockytalkie" class="cta-button">Download on the App Store</a>
         </div>
